# hpcgeom

./: .travis.yml  .vimrc  CMakeLists.txt  README.md  geo_config.h.in
include/: basic_types.h  edge_array.h  edge_set.h  hash_table.h  hashed_bvh.h  hashed_octree.h  spatial_hash.h  transformation.h  vertex_array.h  vertex_set.h
src/: CMakeLists.txt  basic_types.c  edge_array.c  edge_set.c  hash_table.cpp  hashed_bvh.c  hashed_octree.c  qsort.cpp  qsort.h  spatial_hash.c  transformation.c  vertex_array.c  vertex_array.cpp  vertex_set.c
test/: CMakeLists.txt  edge_array_test.cpp  edge_set_test.cpp  gtest_test.cpp  hashed_bvh_test.cpp  hashed_octree_test.cpp  spatial_hash_test.cpp  test_utilities.cpp  test_utilities.h  transformation_test.cpp  vertex_array_test.cpp  vertex_dedup_test.cpp  vertex_set_test.cpp
test/gtest/: CMakeLists.txt
viewer/: CMakeLists.txt  camera.c  camera.h  viewer.c
